<resources>
    <string name="app_name">Mana Food</string>
    <string name="mana_food">Mana Food</string>
    <string name="deliver_favorite_food">Deliver Favorite Food</string>
    <string name="designed_by_n_kalyanam_pranay">Designed by\n Kalyanam Pranay</string>
    <string name="enjoy_restaurant_quality_meals_n_at_home">Enjoy Restaurant Quality Meals \n at home</string>
    <string name="next">Next</string>
    <string name="or">or</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="continue_with">Continue With</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t Have Account</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_with">Sign Up With</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="choose_location">Choose Location</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="choose_location_description">To provide you with the best dining experience, we need your permission to access your device\'s location. By enabling location services, we can offer personalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience.\"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Cart</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="explore_your_favorite_food">Explore Your Favorite Food</string>
    <string name="food_name">Food Name</string>
    <string name="_5">$5</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="popular">Popular</string>
    <string name="view_menu">View Menu</string>
    <string name="proceed">Proceed</string>
    <string name="menu">Menu</string>
    <string name="buy_again">Buy Again</string>
    <string name="previously_buy">Previously buy</string>
    <string name="recent_buy">Recent Buy</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="save_information">Save Information</string>
    <string name="_1234567890">1234567890</string>
    <string name="user_gmail_com">user@gmail.com</string>
    <string name="address_description">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual</string>
    <string name="user">user</string>
    <string name="textview">TextView</string>
    <string name="notification">Notification</string>
    <string name="edit">Edit</string>
    <string name="place_my_order">Place My Order</string>
    <string name="backarrow">backarrow</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="payment_method">Payment Method</string>
    <string name="total_amount">Total Amount</string>
    <string name="congrats_n_your_order_placed">Congrats \n Your Order Placed</string>
    <string name="go_home">Go Home</string>
    <string name="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad</string>
    <string name="strawberry_n_cream_n_wheat">Strowberry \n Cream \n wheat</string>
    <string name="short_description">Short description</string>
    <string name="ingredients">Ingredients</string>
    <string name="default_web_client_id">21235417632-8gguk516cjl60hclcoum74lbjcqp0et5.apps.googleusercontent.com</string>
    <string name="quantity">quantity:</string>
    <string name="_2">2</string>
    <string name="recent_buy_items">Recent Buy Items</string>
    <string name="log_out">Log Out</string>
</resources>