<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/home"
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_04"
        />
    <item android:title="@string/cart"
        android:id="@+id/cartFragment"
        android:icon="@drawable/notification_cart"/>
    <item android:title="@string/search"
        android:id="@+id/searchFragment"
        android:icon="@drawable/search"/>
    <item android:title="@string/history"
        android:id="@+id/historyFragment"
        android:icon="@drawable/history"/>
    <item android:title="@string/profile"
        android:id="@+id/profileFragment"
        android:icon="@drawable/user"/>
</menu>