<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yeonsung_regular"
        android:text="@string/mana_food"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/deliver_favorite_food"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/yeonsung_regular"
        android:text="@string/sign_up_here"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <EditText
        android:id="@+id/signUpUserName"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/icon__2_"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/name"
        android:importantForAutofill=""
        android:inputType="text"
        android:paddingStart="15dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <EditText
        android:id="@+id/signUpEmail"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/icon"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/email"
        android:importantForAutofill=""
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="@+id/signUpUserName"
        app:layout_constraintStart_toStartOf="@+id/signUpUserName"
        app:layout_constraintTop_toBottomOf="@+id/signUpUserName"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/icon__1_"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/password"
        android:importantForAutofill=""
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/signUpEmail"
        app:layout_constraintStart_toStartOf="@+id/signUpEmail"
        app:layout_constraintTop_toBottomOf="@+id/signUpEmail"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/signUpPassword"
        app:layout_constraintStart_toStartOf="@+id/signUpPassword"
        app:layout_constraintTop_toBottomOf="@+id/signUpPassword"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:text="@string/sign_up_with"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView16"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpGoogleButton"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/whitebutton"
        android:drawableStart="@drawable/google_icon_2"
        android:fontFamily="@font/lato_regular"
        android:paddingStart="15dp"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button5"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/whitebutton"
        android:drawableStart="@drawable/facebook_3_1"
        android:fontFamily="@font/lato_regular"
        android:paddingStart="15dp"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/signUpGoogleButton"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpCreateButton"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/greenbuttongradient"
        android:fontFamily="@font/lato_regular"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpGoogleButton"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/haveanaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/already_have_an_account"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/signUpCreateButton"
        app:layout_constraintStart_toStartOf="@+id/signUpCreateButton"
        app:layout_constraintTop_toBottomOf="@+id/signUpCreateButton"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/yeonsung_regular"
        android:text="@string/designed_by_n_kalyanam_pranay"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>