<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingStart="6dp"
    android:paddingEnd="6dp"
    tools:context=".Fragment.ProfileFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="UselessParent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/editButton"
            android:layout_width="125dp"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:background="@drawable/proceedbuttonshape"
            android:elevation="5dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:text="@string/edit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edittextprofileshape"
        android:elevation="2dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/yeonsung_regular"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/lato_regular"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@string/user"
            tools:ignore="DuplicateSpeakableTextCheck,LabelFor,TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edittextprofileshape"
        android:elevation="2dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/yeonsung_regular"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/adrress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/lato_regular"
            android:gravity="top"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:text="@string/address_description"
            tools:ignore="DuplicateSpeakableTextCheck,LabelFor,TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edittextprofileshape"
        android:elevation="2dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/yeonsung_regular"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/lato_regular"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:text="@string/user_gmail_com"
            tools:ignore="DuplicateSpeakableTextCheck,LabelFor,TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edittextprofileshape"
        android:elevation="2dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/yeonsung_regular"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/lato_regular"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:text="@string/_1234567890"
            tools:ignore="DuplicateSpeakableTextCheck,LabelFor,TouchTargetSizeCheck" />

    </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logOutButton"
            android:layout_width="125dp"
            android:background="@drawable/proceedbuttonshape"
            android:backgroundTint="@color/log_out_button"
            android:text="@string/log_out"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="@font/yeonsung_regular"
            android:elevation="5dp"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            />
</LinearLayout>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveInformationButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/proceedbuttonshape"
        android:elevation="5dp"
        android:fontFamily="@font/yeonsung_regular"
        android:text="@string/save_information"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold" />

</FrameLayout>